embed the intro video via ZDFMediathek, not vimeo

--- a/assets/views/intro.mustache
+++ b/assets/views/intro.mustache
@@ -13,7 +13,7 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<br/><br/>
 				<div class="videoWrapper">
-					<iframe src="https://player.vimeo.com/video/126897769" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<iframe allowfullscreen src="//player.zdf.de/miniplayer/embed/?mediaID=2397498&autoPlay=false&layoutMode=dark"></iframe>
 				</div>
 				<br/>
 				<p>Mit dem Browser-Plugin bekommen Sie die Informationen von Lobbyradar genau dort, wo Sie im Netz unterwegs sind. Einmal installiert, erkennt das Lobbyradar-Plugin alle Personen und Organisationen unserer Lobby-Datenbank in den Texten, die Sie lesen. Die gefundenen Personen oder Organisationen werden markiert. Und wenn Sie mit der Maus über die Namen fahren, zeigt Lobbyradar, welche Verbindungen und Informationen in unserer Datenbank zu finden sind. Manche Nachricht und Geschichte wird so in einen völlig neuen Kontext gesetzt. Kostenlos, transparent und ohne, dass Ihre Daten gespeichert werden.</p>
