gracefully ignore tracking for users who blocked tracking.

--- a/assets/views/footer.mustache
+++ b/assets/views/footer.mustache
@@ -1,12 +1,11 @@
-<script type="text/javascript" src="https://script.ioam.de/iam.js" language="JavaScript"></script>
+<script type="text/javascript" src="https://script.ioam.de/iam.js"></script>
 <script type="text/javascript"> 
-  var iam_data = { 
-        "st":"heute",
-        "cp":"ZH/heutede", 
-        "co":"Modul/lobbyradar/A032361", 
-        "sv":"ke" 
-   };
-   iom.c(iam_data,1); 
+	if (iom) iom.c({ 
+		"st":"heute",
+		"cp":"ZH/heutede", 
+		"co":"Modul/lobbyradar/A032361", 
+		"sv":"ke" 
+	},1); 
 </script>
 </body>
 </html>
