lizens und github

--- a/assets/views/faq.mustache
+++ b/assets/views/faq.mustache
@@ -153,7 +153,7 @@ Wie kann ich Verbindungen korrigieren oder ergänzen?
             </div>
             <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
               <div class="panel-body">
-                Weil wir selbst transparent sein wollen, ist Lobbyradar Open Source und kann von jedem unter dieser Lizenz eingesehen und weiterentwickelt werden. Der Quellcode ist auf Github zu finden.
+                Weil wir selbst transparent sein wollen, ist Lobbyradar Open Source und kann von jedem unter dieser <a href="https://github.com/lobbyradar/lobbyradar/blob/release/LICENSE.md">Lizenz</a> eingesehen und weiterentwickelt werden. Der Quellcode ist auf <a href="https://github.com/lobbyradar/lobbyradar">Github</a> zu finden.
               </div>
             </div>
           </div>
