frontpage, cleanup relation display (first steps)

--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -48,6 +48,7 @@
 	
 </div> {{! end .fullscreen }}
 
+<script type="text/javascript" src="/assets/js/utils.js"></script>
 <script type="text/javascript" src="/assets/js/visualisation.js"></script>
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
 <script type="text/javascript" src="https://www.lobbyradar.de/lobbynetwork/graph.js"></script>
