--- a/assets/views/app.mustache
+++ b/assets/views/app.mustache
@@ -38,7 +38,7 @@
 </div>
 <script type="text/javascript" src="https://www.lobbyradar.de/lobbynetwork/graph.js"></script>
 <script type="text/javascript" src="/assets/js/leaflet.js"></script>
-<script type="text/javascript" src="/assets/js/utils.js"></script>
-<script type="text/javascript" src="/assets/js/visualisation.js"></script>
+<script type="text/javascript" src="/assets/js/entity.js"></script>
 <script type="text/javascript" src="/assets/js/networkviz.js"></script>
+<script type="text/javascript" src="/assets/js/visualisation.js"></script>
 {{>footer}}
