--- a/assets/views/index.mustache
+++ b/assets/views/index.mustache
@@ -6,7 +6,10 @@
 		<div class="row intro">
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<div id="video" class="nav-circle big">
-					<div class="nav-circle small"><i class="fa fa-video-camera"></i></div>
+					<a href="/um-was-geht-es">
+						<div class="nav-circle small"><i class="fa fa-video-camera"></i></div>
+					</a>
+
 					<h2>Worum geht es <br/>beim Lobbyradar?</h2>
 
 					<p>
@@ -21,7 +24,10 @@
 			</div>
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<div id="extension" class="hidden-xs hidden-sm nav-circle big">
-					<div class="nav-circle small"><i class="fa fa-download"></i></div>
+					<a href="/download-plugin">
+						<div class="nav-circle small"><i class="fa fa-download"></i></div>
+					</a>
+
 					<h2>Die Lobbyradar-<br/>Browser-Erweiterung</h2>
 
 					<p>
@@ -38,7 +44,10 @@
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<div id="news" class="nav-circle big">
 
-					<div class="nav-circle small newspaper"><i class="fa fa-newspaper-o"></i></div>
+					<a href="/artikel">
+						<div class="nav-circle small newspaper"><i class="fa fa-newspaper-o"></i></div>
+					</a>
+
 					<h2>Alle Beiträge zum<br/>Lobbyradar</h2>
 
 					<p>
@@ -55,7 +64,10 @@
 
 			<div class="col-sm-6 col-md-6 col-lg-3">
 				<div id="app" class="nav-circle big">
-					<div class="nav-circle small"><i class="fa fa-sitemap"></i></div>
+					<a href="/verbindungssuche">
+						<div class="nav-circle small"><i class="fa fa-sitemap"></i></div>
+					</a>
+
 					<h2>Wer mit wem? <br/><br/></h2>
 
 					<p>
@@ -71,9 +83,4 @@
 		</div>
 	</div>
 </div>
-
-<script type="text/javascript" src="/assets/js/leaflet.js"></script>
-<script type="text/javascript" src="/assets/js/utils.js"></script>
-<script type="text/javascript" src="/lobbynetwork/graph.js"></script>
-<script type="text/javascript" src="/assets/js/networkviz.js"></script>
 {{>footer}}
