--- a/assets/views/relation.mustache
+++ b/assets/views/relation.mustache
@@ -30,7 +30,7 @@
 	</div>
 </div>
 <script type="text/javascript" src="/assets/bower_components/d3/d3.min.js"></script>
-<script type="text/javascript" src="/assets/js/utils.js"></script>
+<script type="text/javascript" src="/assets/js/entity.js"></script>
 <script type="text/javascript" src="/assets/js/relationviz.js"></script>
 
 {{>footer}}
