--- a/assets/views/header.mustache
+++ b/assets/views/header.mustache
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" type="text/css" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/leaflet.css">
 	<link rel="stylesheet" type="text/css" href="/assets/css/lobbyradar.css">
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.ico">
 
 	<script type="text/javascript" src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/assets/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/assets/bower_components/moment/min/moment-with-locales.min.js"></script>
 	<script type="text/javascript" src="/assets/js/main.js"></script>
-
 	<!-- viewport -->
 	<meta name="viewport" content="width=device-width">
 	<!--[if lt IE 9]>
